# Antediluvia

./: .env.example  BUILD_STATUS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile.server  FUNDING_STRATEGY.md  LOGIN_PLAN.md  NEXT_STEPS.md  PHASE_2_IMPROVEMENTS.md  PHASE_7_8_COMPLETION_REPORT.md  PHASE_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  REBUILD_SUMMARY.md  claude.md  docker-compose.yml
Design_Bible/: Volume_01_Foundation_Architecture.md  Volume_02_The_World.md  Volume_03_Diegetic_Interface.md  Volume_04_Social_Trinity.md  Volume_05_Lore_Bible_Part1.md  Volume_06_Lore_Bible_Part2.md  Volume_07_MLOps_AI.md  Volume_08_Economy_Crafting.md  Volume_09_End_Game.md  Volume_10_Developer_Handbook.md
crates/antediluvia_ai/: Cargo.toml
crates/antediluvia_ai/src/: dialogue.rs  error.rs  knowledge_base.rs  lib.rs  npc_brain.rs
crates/antediluvia_client/: Cargo.toml
crates/antediluvia_client/src/: combat.rs  foliage.rs  gathering.rs  graphics_settings.rs  gui.rs  inventory.rs  login.rs  main 2.rs  main.rs  map.rs  mob_ai.rs  npc.rs  particles.rs  physics.rs  player.rs  rendering 2.rs  terrain_mesh.rs  water.rs
crates/antediluvia_core/: Cargo.toml
crates/antediluvia_core/src/: combat.rs  crafting.rs  endgame.rs  error.rs  events.rs  lib.rs  mob.rs  network.rs
crates/antediluvia_core/src/entity/: job.rs  mod.rs  npc.rs  player.rs
crates/antediluvia_core/src/world/: corruption.rs  mod.rs  terrain.rs
crates/antediluvia_server/: Cargo.toml
crates/antediluvia_server/src/: auth.rs  db.rs  game.rs  main.rs  net.rs
