[workspace]
members = ["crates/antediluvia_core", "crates/antediluvia_server", "crates/antediluvia_client", "crates/antediluvia_ai"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
noise = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
sled = "0.34"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bevy_renet = "4.0"
renet = "1.2"
hex = "0.4"
bincode = "1.3"
axum = { version = "0.7", features = ["macros", "json"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
glam = { version = "0.30", features = ["serde"] }

[package]
name = "antediluvia"
version = "0.1.0"
edition = "2021"

[dependencies]
