[package]
name = "antediluvia_client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { version = "0.30", features = ["serde"] }
antediluvia_core = { path = "../antediluvia_core" }
bevy_renet = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
bevy_egui = "0.39"

[features]
default = []
solari = ["bevy/bevy_solari"]
