[package]
name = "antediluvia_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
noise = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glam = { version = "0.30", features = ["serde"] }
